modal how fix, scrollbar color

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
 
   font-family: 'IBM Plex Sans', 'Roboto', sans-serif;
   font-size: 16px;
+  scrollbar-color: var(--w8) var(--w10);
   }
 
 body {
